<resources>
    <string name="app_name">Earthquake Report</string>

     <string name="near_the">Near the</string>


    <string name="no_earthquakes">No earthquakes found.</string>

    <string name="no_internet_connection">No internet connection.</string>

    <string name="website_menu">Website</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Settings</string>

    <string name="settings_min_magnitude_label">Minimum Magnitude</string>

    <string name="limit_label">Limit</string>
    <string name="limit_max_magnitudel">Max. Magnitude</string>
    <string name="limit_min_magnitude">Min. Magnitude</string>

    <string name="default_max_magnitude">7</string>
    <string name="default_min_magnitude">0</string>




    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="default_limit" translatable="false">10</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>
    <string name="title_activity_maps">Map</string>
    <string name="refresh">Refresh</string>
    <string name="limit">Limit</string>
    <string name="max_magnitude">Max. Magnitude</string>
    <string name="min_magnitude">Min. Magnitude</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="style_choose">Map Style</string>
    <string name="style_label_default">Default</string>

    <string name="style_label_retro">Retro</string>
    <string name="style_label_night">Night</string>
    <string name="style_label_grayscale">Grayscale</string>




</resources>
