<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/default_limit"
        android:inputType="numberDecimal"
        android:key="@string/limit"
        android:selectAllOnFocus="true"
        android:title="@string/limit_label" />
    <EditTextPreference
        android:defaultValue="@string/default_max_magnitude"
        android:inputType="numberDecimal"
        android:key="@string/max_magnitude"
        android:selectAllOnFocus="true"
        android:title="max_magnitude" />

    <EditTextPreference
        android:defaultValue="@string/default_min_magnitude"
        android:inputType="numberDecimal"
        android:key="@string/min_magnitude"
        android:selectAllOnFocus="true"
        android:title="min_magnitude" />


</PreferenceScreen>